# Ai-programming-homework-cuda-python-and-pybind11-neural-networks

./: README .md
task3/: CMakeLists.txt  CNNIMAGENET.py  CNNMNIST.py  dataset.py  layers.py  model.py  optimizer.py  test.py
task3/runs/Jan16_01-42-50_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1736962970.ubuntu-X299X-AORUS-MASTER.397060.0
task3/runs/Jan16_09-18-03_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1736990283.ubuntu-X299X-AORUS-MASTER.401118.0
task3/runs/Jan16_13-33-51_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737005631.ubuntu-X299X-AORUS-MASTER.406533.0
task3/runs/Jan16_13-35-36_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737005736.ubuntu-X299X-AORUS-MASTER.407220.0
task3/runs/Jan16_17-16-23_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737018983.ubuntu-X299X-AORUS-MASTER.409576.0
task3/runs/Jan16_17-17-48_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737019068.ubuntu-X299X-AORUS-MASTER.410019.0
task3/runs/Jan16_21-09-08_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737032948.ubuntu-X299X-AORUS-MASTER.443556.0
task3/runs/Jan17_10-14-32_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737080072.ubuntu-X299X-AORUS-MASTER.713960.0
task3/runs/Jan17_18-56-13_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737111373.ubuntu-X299X-AORUS-MASTER.890754.0
task3/runs/Jan17_23-15-28_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737126928.ubuntu-X299X-AORUS-MASTER.941950.0
task3/runs/Jan17_23-16-57_ubuntu-X299X-AORUS-MASTER/: events.out.tfevents.1737127017.ubuntu-X299X-AORUS-MASTER.942474.0
task3/src/: tmp.cu
(+56 files in other folders)
